--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,6 +6,7 @@ def add(num1,num2){
 
 node{
     stage("gal"){
+        checkout([$class: 'GitSCM', branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/galbirk/react-playground.git']]])
         if (add(3,3) > 5 )
         {
             println("Big")
